# reroller

./: .gitignore  flake.nix
fileformat/: reroller.capnp
reroller/: .devcontainer.json  meson.build
reroller/src/: reroller.cpp
sid2reroller/: .devcontainer.json  pyproject.toml
sid2reroller/sid2reroller/: __init__.py  cli.py  convert.py  record.py
